Fix link text specificity on dark mode

--- a/client/imports/ui/pages/logistics/logistics.less
+++ b/client/imports/ui/pages/logistics/logistics.less
@@ -80,7 +80,7 @@
       opacity: 0.5;
     }
   }
-  .puzzle, .meta {
+  a.puzzle, a.meta {
     display: flex;
     flex-flow: row nowrap;
     color: var(--text-color);
